# hcs-server

./: Cargo.toml  Config.toml
src/: config.rs  errors.rs  extra_data.rs  lib.rs  main.rs  serve.rs
src/sync_client_to_server/: directory_create.rs  directory_delete.rs  directory_move.rs  file_create.rs  file_delete.rs  file_modify.rs  file_move.rs  mod.rs
src/sync_server_to_client/: directory_create.rs  directory_delete.rs  directory_move.rs  file_create.rs  file_delete.rs  file_modify.rs  file_move.rs
